# gltf_for_rust

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
generator/: Cargo.toml
generator/src/: codegen.rs  main.rs  module_builder.rs  module_tree.rs  naming.rs  schema.rs  schema2.rs  schema_uri.rs  type_deduction.rs
gltf_for_rust/: Cargo.toml
gltf_for_rust/src/: import.rs  lib.rs  test.rs
gltf_for_rust/test_resources/: palladin.gltf
src/: main.rs
