[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.16"
serde_json = "1.0"
quote = "1.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
convert_case = "0.6"
thiserror = "1.0"
anyhow = "1.0.81"
walkdir = "2.5.0"
serde = { version = "1.0.197", features = ["derive"] }
itertools = "0.12.1"

[dependencies.syn]
version = "2.0.46"
features = ["parsing"]
default-features = false
